--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-psycopg2~=2.9.6
+psycopg2-binary~=2.9.6
 Flask-SQLAlchemy
 Flask-Migrate
 Flask-WTF
@@ -8,3 +8,5 @@ Flask~=2.2.3
 SQLAlchemy~=2.0.9
 bootstrap-flask
 python-dotenv
+
+
