--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -12,4 +12,4 @@ sonar.exclusions=migrations/
 #sonar.sourceEncoding=UTF-8
 
 # Exclusions for copy-paste detection
-#sonar.cpd.exclusions=
+sonar.cpd.exclusions=migrations/
