Upgrade to Flask 3

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ psycopg2-binary~=2.9.6
 Flask-SQLAlchemy
 Flask-Migrate
 Flask-WTF
-Flask-Login @ git+https://github.com/maxcountryman/flask-login.git
+Flask-Login~=0.6.3
 werkzeug
 Flask~=3.0.0
 SQLAlchemy~=2.0.9
